static/css/main.css
/* ... */
.timeline-item::before {
    content: "";
    position: absolute;
    left: 10px;
    top: 10px;
    width: 15px;
    height: 15px;
    background: var(--accent-secondary);
    border-radius: 50%;
}

.timeline-date {
    color: var(--accent-tertiary);
    font-weight: bold;
    margin-bottom: 5px;
    margin-left: 40px;
}

.timeline-title {
    margin-bottom: 30px;
}

.timeline-title>* {
    display: inline-block;
}

.timeline-title-composed {
    display: flex;
    align-items: center;
}

.timeline-subtitle {
    color: var(--accent-tertiary);
}

.timeline-title-detail {
    font-weight: 500;
    text-transform: uppercase;
    font-size: 14px;
}

.timeline-title-detail::before {
    content: '•';
    margin: 0 10px;
}

.timeline-title h3 {
    display: block;
}

.timeline-content {
    background: var(--bg-tertiary);
    padding: 15px;
    border-radius: 8px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    text-align: justify;
}

/*--------------------------------------------------------------
  Lists
--------------------------------------------------------------*/
.language-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.language-list li {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: left;
    gap: 10px;
}

/*--------------------------------------------------------------
  Table
--------------------------------------------------------------*/
.table-container {
    border: 1px solid var(--neutral-secondary);
    border-radius: 10px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

.table {
    width: 100%;
    border-collapse: collapse;
}

.table tr {
    border-bottom: 1px solid var(--neutral-secondary);
}

.table tr:last-child {
    border-bottom: 0;
}

.table tr td {
    background-color: var(--bg-tertiary);
    padding: 15px 20px;
}

.table tr td:has(img) {
    display: grid;
    align-items: center;
    justify-content: left;
}

.table tr:first-child td:first-child {
    border-radius: 10px 0 0 0;
}

.table tr:first-child td:last-child {
    border-radius: 0 10px 0 0;
}

.table tr:last-child td:first-child {
    border-radius: 0 0 0 10px;
}

.table tr:last-child td:last-child {
    border-radius: 0 0 10px 0;
}

.table tr:first-child:last-child td:first-child {
    border-radius: 10px 0 0 10px;
}

.table tr:first-child:last-child td:last-child {
    border-radius: 0 10px 10px 0;
}

/*--------------------------------------------------------------
  Card
--------------------------------------------------------------*/
.card {
    background: var(--bg-tertiary);
    padding: 15px;
    border-radius: 8px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

.card .card-img {
    width: 100%;
    min-height: 150px;
    max-height: 150px;
    object-fit: cover;
    vertical-align: top;
    border-radius: 5px 5px 0 0;
}

.card .card-title h1,
.card .card-title h2 {
    margin: 0;
}

.card .card-content {
    padding: 10px;
    position: relative;
    text-align: justify;
    display: grid;
    gap: 15px;
}

.card .card-content-img {
    border-radius: 50%;
    position: absolute;
    top: -75px;
    right: 30px;
    z-index: 1;
    max-width: 150px;
    opacity: 1;
}

.card-footer {
    display: flex;
    gap: 10px;
}

/*--------------------------------------------------------------
  Button
--------------------------------------------------------------*/
.button {
    display: inline-grid;
    grid-auto-flow: column;
    gap: 10px;
    background: var(--accent-tertiary);
    color: white;
    padding: 10px 15px;
    font-weight: bold;
    text-decoration: none;
    border-radius: 6px;
    transition: 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
    align-items: center;
}

.button i {
    font-size: 20px;
    padding: 0;
}

.button:hover {
    background-color: var(--accent-tertiary);
    box-shadow: 0 6px 14px var(--accent-tertiary);
}

/*--------------------------------------------------------------
  Image Flag
--------------------------------------------------------------*/
.img-flag {
    width: 35px;
    aspect-ratio: 1;
}

/*--------------------------------------------------------------
  Animations
--------------------------------------------------------------*/
.lang-transition {
    animation: langBlur 0.3s ease-in-out;
}

@keyframes langBlur {
    0% {
        filter: blur(0px);
    }

    5% {
        filter: blur(5px) saturate(0) grayscale(1);
        opacity: 0.2;
    }

    50% {
        filter: blur(10px) saturate(2) grayscale(0);
        opacity: 1;
    }

    100% {
        filter: blur(0px);
        opacity: 1;
    }
}

@keyframes fadeIn {
    0% {
        transform: scale(1.1);
        opacity: 0;
    }

    25% {
        transform: scale(1);
    }

    100% {
        opacity: 1;
    }
}

@keyframes glow {
    0% {
        --x: 0%;
        --y: 0%;
    }

    25% {
        --x: 100%;
        --y: 0%;
    }

    50% {
        --x: 100%;
        --y: 100%;
    }

    75% {
        --x: 0%;
        --y: 100%;
    }

    100% {
        --x: 0%;
        --y: 0%;
    }
}

/*--------------------------------------------------------------
  Dark Mode Styles
--------------------------------------------------------------*/
body.dark-mode {
    background-color: var(--dark-bg-primary);
    color: var(--dark-text-primary);
}

body.dark-mode h1,
body.dark-mode h2,
body.dark-mode h3,
body.dark-mode h4,
body.dark-mode h5,
body.dark-mode h6 {
    color: var(--dark-text-primary);
}

body.dark-mode .main-nav .nav-left .nav-logo {
    color: var(--accent-tertiary);
}

body.dark-mode .main-nav .nav-menu ul li:not(:last-child):after {
    color: var(--accent-tertiary);
}

body.dark-mode .nav-toggle-icon {
    color: var(--accent-tertiary);
}

body.dark-mode .profile-pic {
    background-color: var(--dark-text-primary);
}

body.dark-mode .sidebar,
body.dark-mode .main-content {
    background-color: var(--dark-bg-secondary);
}
/* ... */

